--- a/src/components/content-components/right-panel.css
+++ b/src/components/content-components/right-panel.css
@@ -1,6 +1,6 @@
-.big-title {
-  font-size: 3.5em;
-  font-weight: 700;
+.med-title {
+  font-size: 2em;
+  font-weight: 600;
   margin-top: 7px;
 }
 
