--- a/src/components/content-components/right-panel.css
+++ b/src/components/content-components/right-panel.css
@@ -5,9 +5,10 @@
 }
 
 .field-label {
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 700;
   margin-top: 27px;
   margin-bottom: 5px;
+  color: #898989;
   /* margin-left: 3px; */
 }
