added modal structure and add folder modal, and changed hover transition time

--- a/src/components/content-components/left-panel-components/directory.css
+++ b/src/components/content-components/left-panel-components/directory.css
@@ -26,6 +26,8 @@
   font-size: 1.2em;
 
   display: flex;
+  width: 100%;
+  box-sizing: border-box;
   flex-direction: row;
   }
   .directory-medium:hover {
