--- a/src/components/content-components/right-panel.css
+++ b/src/components/content-components/right-panel.css
@@ -8,6 +8,7 @@
   font-size: 1.1em;
   font-weight: 700;
   margin-top: 27px;
+  margin-left: 2px;
   margin-bottom: 5px;
   color: #898989;
   /* margin-left: 3px; */
