--- a/src/components/content.css
+++ b/src/components/content.css
@@ -86,6 +86,8 @@
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
   z-index: 1;
+  font-weight: 400;
+  box-shadow: 0 3px 7px #00000022;
 }
 
 .tooltip:hover .tooltip-text {
