--- a/src/components/content.css
+++ b/src/components/content.css
@@ -95,3 +95,40 @@
   opacity: 1;
 }
 
+.call-to-action {
+  border: 2px solid #ea7b36;
+  font-size: 1.4em;
+  font-weight: 600;
+  padding: 5px;
+  justify-content: space-between;
+
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background: linear-gradient(90deg, #2a2a2a 0%, #2a2a2a 50%, #74482c 100%);
+}
+
+.call-to-action-2 {
+  font-size: 1em;
+  font-weight: 700;
+  padding: 7px 15px;
+  margin-top: 28px;
+  margin-left: auto;
+  justify-content: center;
+
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  border-radius: 7px;
+  background: #bc4512;
+  transition: filter 0.25s;
+}
+.locked {
+  background: #606060;
+  cursor: not-allowed;
+}
+
