--- a/src/components/content-components/center-panel-components/toolbar.css
+++ b/src/components/content-components/center-panel-components/toolbar.css
@@ -9,8 +9,8 @@
   display: flex;
   flex-direction: row;
   justify-content: left;
-  height: 80px;
-  padding: 15px 20px 0px calc(max(20px, (100vw - 1225px) / 2));
+  height: 90px;
+  padding: 20px 20px 0px calc(max(20px, (100vw - 1460px) / 2));
   overflow-x: scroll;
   overflow-y: hidden;
 }
@@ -19,14 +19,14 @@
 .toolbar-section {
   display: flex;
   flex-direction: column;
-  font-size: 0.8em;
+  font-size: 0.9em;
   font-weight: 700;
   align-items: center;
   justify-content: center;
   margin-top: 4px;
   /* outline: 1px solid white; */
   letter-spacing: 0.1em;
-  color: #606060;
+  color: #737373;
 }
 
 .toolbar-subsection {
@@ -38,11 +38,16 @@
 
 .icon-button {
   border-radius: 5px;
-  width: 30px;
-  height: 30px;
-  margin: 5px;
+  width: 35px;
+  height: 35px;
+  margin: 8px 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #2A2A2A;
+  padding: 5px;
+}
+
+.icon-button.chosen-view {
+  filter: brightness(1.3);
 }
