--- a/src/components/content.css
+++ b/src/components/content.css
@@ -37,6 +37,13 @@
   justify-content: left;
   flex-direction: column;
   /* outline: 1px white solid; */
+  flex: 1 1 0;
+  min-height: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 100%;
+  min-width: 0;
+  overflow-x: hidden;
 }
 
 .content {
@@ -45,11 +52,21 @@
   justify-content: space-between;
   flex-direction: row;
   /* outline: 1px white solid; */
+  flex: 1 1 0;
+  min-height: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 100%;
+  min-width: 0;
+  overflow-x: hidden;
 }
 
 .content-panel-container {
   margin: 3px 10px 10px 10px;
-  width: 240px;
+  width: 280px !important;
+  min-width: 280px !important;
+  max-width: 280px !important;
+  flex: 0 0 280px !important;
   border-radius: 7px;
   border: 1px #3C3C3C solid;
   color: #bbbbbb;
@@ -59,6 +76,10 @@
   flex-direction: column;
   justify-content: space-between;
   /* outline: 1px white solid; */
+  min-width: 0;
+  min-height: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .content-nopanel-container {
@@ -69,6 +90,10 @@
   display: flex;
   flex-direction: column;
   /* border: 1px white solid; */
+  min-width: 0;
+  min-height: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .tooltip-text {
@@ -112,7 +137,7 @@
 }
 
 .call-to-action-2 {
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 700;
   padding: 7px 15px;
   margin-top: 28px;
@@ -130,5 +155,14 @@
 .locked {
   background: #606060;
   cursor: not-allowed;
+}
+
+/* If you have right-panel, add similar rules */
+.right-panel, .left-panel {
+  width: 280px !important;
+  min-width: 280px !important;
+  max-width: 280px !important;
+  flex: 0 0 280px !important;
+  box-sizing: border-box;
 }
 
