--- a/src/modals/generic-modal.css
+++ b/src/modals/generic-modal.css
@@ -33,17 +33,30 @@
 /*  SPECIFIC STYLING  */
 
 .modal-title {
-  font-size: 1.2em;
+  font-size: 20px;
   font-weight: 600;
-  margin-bottom: 1.5em;
+  margin-bottom: 15px;
+  margin-left: 2px;
+  margin-top: 3px;
 }
 
 .modal-body {
-  font-size: 0.75em;
+  font-size: 12px;
   font-weight: 700;
   margin-bottom: 4px;
-  margin-left: 3px;
-  letter-spacing: 0.01em;
+  margin-left: 2px;
+  letter-spacing: 0.2px;
+}
+
+.modal-paragraph {
+  font-size: 13px;
+  font-weight: 300;
+  overflow-wrap: normal;
+  display: flex;
+  margin-left: 2px;
+  flex: 1;
+  margin-bottom: 20px;
+  width: 320px;
 }
 
 .modal-file-explorer-button {
@@ -56,8 +69,8 @@
   border: 1px #3C3C3C solid;
   color: #c2c2c2;
   background-color: #252525;
-  font-size: 0.8em;
-  letter-spacing: 0.01em;
+  font-size: 13px;
+  letter-spacing: 0.1px;
   padding: 7px;
 
   outline: none;
@@ -65,6 +78,13 @@
   box-shadow: none;
   cursor: pointer;
   text-align: left;
+}
+
+.modal-whisper {
+  font-style: italic;
+  color: #606060;
+  margin-top: auto;
+  width: 200px;
 }
 
 .close-button {
