--- a/src/universal-styling/index.css
+++ b/src/universal-styling/index.css
@@ -2,10 +2,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
+html, body, #root {
+  height: 100dvh;
+  min-height: 0;
+  width: 100vw;
+  min-width: 0;
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  overflow: hidden;
+  overflow-x: hidden;
+}
+
 #root {
-  justify-content: center;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  min-height: 0;
+  width: 100%;
+  min-width: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 :root {
@@ -42,21 +59,22 @@ a {
   color: inherit;
 }
 
-html {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  margin: 0;
-  height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  outline: 1px white solid;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  outline: none;
   cursor: default;
   user-select: none;
+  box-sizing: border-box;
+  height: 100dvh;
+  min-height: 0;
+  width: 100vw;
+  min-width: 0;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 h1 {
@@ -91,7 +109,7 @@ input {
 }
 hr {
   border: 2px solid #3c3c3c;
-  margin: 0px 10px;
+  margin: 0px 20px;
   border-radius: 999px;
 }
 .hr {
@@ -103,16 +121,21 @@ hr {
 }
 
 .scrollable::-webkit-scrollbar {
-  width: 8px;
+  width: 18px;
 }
 .scrollable::-webkit-scrollbar-track {
   background: transparent;
 }
 .scrollable::-webkit-scrollbar-thumb {
   background-color: #ffffff22;
-  border-radius: 10px;
+  border-radius: 10px !important;
   border: 5px solid #2a2a2a; /* match background to create spacing */
   }
-  .scrollable::-webkit-scrollbar-thumb :hover {
-    filter: brightness(1.2);
+
+.scrollable.light-bg::-webkit-scrollbar-thumb {
+  border: 5px solid #2a2a2a; /* match background to create spacing */
+  }
+
+.scrollable.dark-bg::-webkit-scrollbar-thumb {
+  border: 5px solid #222222; /* match background to create spacing */
   }
