--- a/src/components/content-components/center-panel-components/search-bar.css
+++ b/src/components/content-components/center-panel-components/search-bar.css
@@ -22,7 +22,31 @@
   transition: border-color 0.4s, box-shadow 0.4s;
 }
 
-.search-field:focus {
+.search-field-span {
+  display: flex;
+  width: calc(min(100%, 100vw - 590px));
+  box-sizing: border-box;
+
+  font: inherit;
+  border-radius: 999px;
+  border: 1px #767676 solid;
+  color: #d9d9d9;
+  background-color: #3c3c3c;
+  padding: 7px 9px 7px 9px;
+
+  overflow: hidden;
+  resize: none;
+  outline: none;
+  text-overflow: ellipsis;
+  box-shadow: none;
+  cursor: text;
+
+  white-space: nowrap;
+
+  transition: border-color 0.4s, box-shadow 0.4s;
+}
+
+.search-field-span:focus {
   border-color: #c56ec9;
   box-shadow: 0px 0px 50px #c56ec922;
 }
