--- a/src/components/content-components/right-panel-components/field.css
+++ b/src/components/content-components/right-panel-components/field.css
@@ -7,7 +7,29 @@
   border-radius: 7px;
   border: 1px #3C3C3C solid;
   color: #c2c2c2;
-  background-color: #252525;
+  background-color: #222222;
+  font-size: 1.3em;
+  letter-spacing: 0.01em;
+
+  overflow: hidden;
+  resize: none;
+  outline: none;
+  text-overflow: ellipsis;
+  box-shadow: none;
+  cursor: text;
+
+  transition: border-color 0.4s, box-shadow 0.4s;
+}
+.field-span {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+
+  font: inherit;
+  border-radius: 7px;
+  border: 1px #3C3C3C solid;
+  color: #c2c2c2;
+  background-color: #222222;
   font-size: 1.3em;
   letter-spacing: 0.01em;
   padding: 7px;
@@ -22,7 +44,7 @@
   transition: border-color 0.4s, box-shadow 0.4s;
 }
 
-.field:focus {
+.field-span:focus {
   border-color: #c56ec9;
   box-shadow: 0px 0px 50px #c56ec922;
 }
