--- a/src/components/content.css
+++ b/src/components/content.css
@@ -98,6 +98,7 @@
 
 .tooltip-text {
   visibility: hidden;
+  font-family: 'Inter', sans-serif;
   background-color: #333;
   color: #fff;
   font-size: 12px;
@@ -134,6 +135,10 @@
   box-sizing: border-box;
   border-radius: 5px;
   background: linear-gradient(90deg, #2a2a2a 0%, #2a2a2a 50%, #74482c 100%);
+}
+.call-to-action.inactive {
+  border: 2px solid hsl(23, 0%, 56%);
+  background: linear-gradient(90deg, #2a2a2a 0%, #2a2a2a 50%, hsl(23, 0%, 31%) 100%);
 }
 
 .call-to-action-2 {
