added view types, fully implemented recentlyviewed, and deleting file/folders and confirmation

--- a/src/components/content-components/center-panel-components/toolbar.css
+++ b/src/components/content-components/center-panel-components/toolbar.css
@@ -48,8 +48,8 @@
   padding: 5px;
 }
 
-.icon-button.grayed {
-  color: #454545;
+.icon-button.grayed > * {
+  opacity: 40%;
 }
 
 .icon-button.chosen-view {
