--- a/src/components/content-components/center-panel-components/files.css
+++ b/src/components/content-components/center-panel-components/files.css
@@ -14,30 +14,6 @@
   background-color: #222222;
 }
 
-.file-select-box {
-  margin: 20px 10px;
-  padding: 15px;
-  display: flex;
-  background-color: #222222;
-  flex-direction: column;
-  width: 140px;
-  border-radius: 7px;
-  min-height: fit-content;
-  height: 140px;
-  font-size: 1.2em;
-  text-align: center;
-  align-items: center;
-  font-weight: 500;
-  gap: 10px;
-}
-.file-select-box.new {
-  color: #737373;
-}
-.file-select-box.highlighted {
-  filter: brightness(1.2);
-  outline: 1px solid #2d699b;
-}
-
 .empty-box {
   padding: 60px 15px;
   display: flex;
@@ -54,6 +30,80 @@
   color: #606060;
 }
 
+.files-row {
+  display: flex;
+  flex-direction: column;
+  /* outline: 1px solid white; */
+  padding: 15px 1px 30px 1px;
+  overflow-y: auto;
+  height: 100%;
+  min-height: 0;
+  min-width: 200px;
+  overflow-x: hidden;
+  flex: 1 1 0;
+  box-sizing: border-box;
+  background-color: #222222;
+}
+
+.file-select-box {
+  margin: 20px 10px;
+  padding: 15px;
+  display: flex;
+  background-color: #222222;
+  flex-direction: column;
+  width: 140px;
+  border-radius: 7px;
+  min-height: fit-content;
+  height: 140px;
+  font-size: 1.2em;
+  text-align: center;
+  align-items: center;
+  font-weight: 500;
+  gap: 10px;
+}
+.file-select-box-content {
+  margin-top: 10px;
+  padding: 15px;
+  display: flex;
+  background-color: #222222;
+  flex-direction: row;
+  width: 100%;
+  border-radius: 7px;
+  min-height: fit-content;
+  height: 60px;
+  font-size: 1.5em;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  text-align: left;
+  align-items: left;
+  gap: 15px;
+  justify-content: left;
+}
+.file-select-box-list {
+  margin-top: 5px;
+  padding: 5px 5px 7px 5px;
+  display: grid;
+  grid-template-columns: 1fr 15fr 1fr;
+  background-color: #222222;
+  width: 100%;
+  border-radius: 5px;
+  min-height: fit-content;
+  font-size: 1.1em;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  text-align: left;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+}
+.file-select-box.new, .file-select-box-content.new, .file-select-box-list.new {
+  color: #737373;
+}
+.file-select-box.highlighted, .file-select-box-content.highlighted, .file-select-box-list.highlighted {
+  filter: brightness(1.2);
+  outline: 1px solid #2d699b;
+}
+
 .rounded-rect-icon {
   border: 2px solid #606060;
   border-radius: 10px;
@@ -64,4 +114,33 @@
   align-items: center;
   margin-bottom: 8px;
   margin-top: 2px;
+}
+.rounded-rect-icon.content {
+  border: 2px solid #606060;
+  border-radius: 8px;
+  width: 70px;
+  max-width: 70px;
+  height: 47px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.rounded-rect-icon.list {
+  border: 2px solid #606060;
+  border-radius: 3px;
+  width: 23px;
+  max-width: 25px;
+  height: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  margin-left: 1px;
+  margin-right: 5px;
 }
