--- a/src/components/content-components/left-panel-components/recently-viewed.css
+++ b/src/components/content-components/left-panel-components/recently-viewed.css
@@ -27,7 +27,7 @@
 
   display: flex;
   flex-direction: row;
-  width: 210px;
+  width: 100%;
   }
   .recently-viewed-medium:hover {
     filter: brightness(1.2);
