--- a/src/components/content-components/center-panel-components/search-results.css
+++ b/src/components/content-components/center-panel-components/search-results.css
@@ -8,13 +8,14 @@
 
   font: inherit;
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 400;
+  font-style: italic;
   border-radius: 8px;
   border: 1px #4f4f4f solid;
-  color: #d9d9d9;
+  color: #737373;
   background-color: #303030;
   padding: 7px 9px 7px 9px;
-  box-shadow: 0px 5px 9px #00000066;
+  box-shadow: 0px 5px 14px #00000066;
 
   resize: none;
   outline: none;
@@ -69,6 +70,7 @@
   margin: 0px 0px 5px 0px;
   font-size: 0.9em;
   letter-spacing: 1px;
+  font-weight: 700;
   color: #737373;
   justify-content: space-between;
   align-items: center;
