--- a/src/components/content-components/center-panel-components/search-results.css
+++ b/src/components/content-components/center-panel-components/search-results.css
@@ -14,7 +14,7 @@
   border: 1px #4f4f4f solid;
   color: #737373;
   background-color: #303030;
-  padding: 7px 9px 7px 9px;
+  padding: 7px 9px 5px 9px;
   box-shadow: 0px 5px 14px #00000066;
 
   resize: none;
@@ -38,17 +38,37 @@
   display: inline-flex;
   align-items: flex-start;
   text-align: left;
-  background-color: #303030;
-  border: 1px solid #4f4f4f;
+  background-color: #434343;
+  border: 1px solid #535353;
+  color: #d9d9d9;
   border-radius: 12px;
   padding: 4px 8px;
-  margin-right: 4px;
-  margin-bottom: 4px;
+  margin-right: 8px;
+  margin-bottom: 6px;
   cursor: pointer;
 
   max-width: 100%;
   white-space: normal; /* allow wrapping if needed */
-  word-break: break-word; /* wrap long words if necessary */
+  word-break: break-all; /* wrap long words if necessary */
+}
+
+.search-result {
+  display: inline-flex;
+  align-items: center;
+  text-align: left;
+  background-color: #3c3c3c;
+  color: #d9d9d9;
+  border-radius: 7px;
+  padding: 6px 6px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  cursor: pointer;
+  font-style: italic;
+  gap: 8px;
+
+  max-width: 100%;
+  white-space: normal; /* allow wrapping if needed */
+  word-break: break-all; /* wrap long words if necessary */
 }
 
 .star-icon {
@@ -58,11 +78,17 @@
 .chip-name {
   font-size: 12px;
 }
+.results {
+  margin: 0px 0px 2px 0px;
+  display: flex;
+  flex-direction: column;
+}
 
 .results-label {
-  margin: 10px 0px 0px 0px;
+  margin: 8px 0px 5px 0px;
   font-style: italic;
   color: #d9d9d9;
+  font-weight: 500;
 }
 
 .starred-label {
