--- a/src/components/content-components/left-panel.css
+++ b/src/components/content-components/left-panel.css
@@ -5,6 +5,24 @@
   margin-left: 3px;
 }
 
+.title-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.settings-button {
+  margin-top: 15px;
+  color: #737373;
+  background-color: #2a2a2a;
+  padding: 5px;
+  border-radius: 5px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 .section-title {
   font-size: 1em;
   font-weight: 700;
