--- a/src/components/content.css
+++ b/src/components/content.css
@@ -172,3 +172,9 @@
   box-sizing: border-box;
 }
 
+.truncate {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 280px;
+}
