--- a/src/modals/generic-modal.css
+++ b/src/modals/generic-modal.css
@@ -5,7 +5,6 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(2px);
   border-top: 2px solid #2c2c2c;
   display: flex;
   justify-content: center;
@@ -24,6 +23,25 @@
   min-width: 300px;
   max-width: 90%;
 }
+.modal-container.onboarding {
+  background: linear-gradient(110deg, #bc4512, #da0f90);
+  border-radius: 12px;
+  width: 650px;
+  height: 350px;
+  border: none;
+  outline-offset: -1px;
+  outline: 1px solid #ffffff22;
+  overflow: hidden;
+}
+
+.modal-container.splash {
+  border-radius: 12px;
+  border: none;
+  outline-offset: -1px;
+  outline: 1px solid #ffffff22;
+  overflow: hidden;
+  padding: 0;
+}
 
 .modal-content {
   margin-top: 0rem;
@@ -32,12 +50,48 @@
 
 /*  SPECIFIC STYLING  */
 
+.modal-big-title {
+  font-size: 45px;
+  font-weight: 600;
+  margin-bottom: 15px;
+  margin-left: 2px;
+  margin-top: 3px;
+  display: flex;
+  align-items: center;
+  line-height: 44px;
+  gap: 5px;
+}
+
 .modal-title {
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 15px;
   margin-left: 2px;
   margin-top: 3px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.modal-big-subtitle {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 15px;
+  margin-left: 2px;
+  margin-top: 3px;
+  display: flex;
+  align-items: center;
+  opacity: 0.6;
+  gap: 5px;
+}
+
+.modal-big-body {
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  margin-top: 50px;
+  margin-left: 2px;
+  letter-spacing: 0.2px;
 }
 
 .modal-body {
@@ -165,7 +219,7 @@
   right: 0;
   bottom: 0;
   background-color: #666;
-  transition: 0.45s cubic-bezier(0.4, 1.35, 0.18, 1);
+  transition: transform 0.45s cubic-bezier(0.4, 1.4, 0.2, 1), background 0.3s;
   border-radius: 34px;
 }
 
@@ -177,7 +231,7 @@
   left: 3px;
   bottom: 3px;
   background-color: white;
-  transition: 0.45s cubic-bezier(0.4, 1.35, 0.18, 1);
+  transition: transform 0.45s cubic-bezier(0.4, 1.4, 0.2, 1), background 0.3s;
   border-radius: 50%;
 }
 
@@ -214,4 +268,37 @@ input:checked + .slider:before {
   white-space: nowrap;
 }.red {
   color: #c97676;
+}
+
+.onboarding-field {
+  margin-left: 3px;
+  background-color: transparent !important;
+  border-width: 2px !important;
+}
+.onboarding-field-span {
+  margin-left: 3px;
+  background-color: transparent !important;
+  border-width: 2px !important;
+  padding-left: 7px;
+}
+.onboarding-button {
+  background-color: #2c2c2c;
+  border-radius: 7px;
+  height: 38px;
+  width: 38px;
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.spin {
+  animation: spin 1s linear infinite;
+}
+
+.banner {
+  width: 100%;
+  height: 260px;
+  background: linear-gradient(110deg, #bc4512, #da0f90);
 }
