--- a/src/modals/generic-modal.css
+++ b/src/modals/generic-modal.css
@@ -283,6 +283,9 @@ input:checked + .slider:before {
 }
 .onboarding-button {
   background-color: #2c2c2c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 7px;
   height: 38px;
   width: 38px;
@@ -298,7 +301,32 @@ input:checked + .slider:before {
 }
 
 .banner {
-  width: 100%;
-  height: 260px;
   background: linear-gradient(110deg, #bc4512, #da0f90);
+  display: block;
 }
+
+.quick-launch {
+  flex: 1;
+  border-radius: 7px;
+  border: 1px #3C3C3C solid;
+  color: #bbbbbb;
+  background-color: #252525;
+  padding: 10px;
+}
+
+.quick-launch-medium {
+  flex: 1;
+  padding: 6px 6px 6px 6px;
+  color: #d9d9d9;
+  background-color: #252525;
+  border-radius: 4px;
+  font-size: 1.2em;
+
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  }
+  .quick-launch-medium:hover {
+    filter: brightness(1.2);
+    cursor: pointer;
+  }
