--- a/src/components/content-components/center-panel-components/files.css
+++ b/src/components/content-components/center-panel-components/files.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, 120px);
   gap: 15px 25px;
-  padding: 45px 50px 30px 0px;
-  margin: 0px 0px 0px 0px;
+  padding: 30px 50px 30px 0px;
+  margin: 5px 0px 0px 0px;
   border-radius: 5px;
   overflow-y: auto;
   height: 100%;
@@ -72,8 +72,10 @@
 .files-row {
   display: flex;
   flex-direction: column;
-  /* outline: 1px solid white; */
-  padding: 15px 1px 30px 1px;
+  /* border: 1px solid white; */
+  padding: 5px 7px 30px 1px;
+  margin-top: 5px;
+  gap: 10px;
   overflow-y: auto;
   height: 100%;
   min-height: 0;
@@ -85,7 +87,7 @@
 }
 
 .file-select-box {
-  margin: 0px 10px;
+  margin: 0px 0px;
   padding: 15px;
   display: flex;
   background-color: #222222;
@@ -101,7 +103,6 @@
   gap: 10px;
 }
 .file-select-box-content {
-  margin-top: 10px;
   padding: 15px;
   display: flex;
   background-color: #222222;
@@ -140,14 +141,15 @@
 }
 .file-select-box.highlighted, .file-select-box-content.highlighted, .file-select-box-list.highlighted {
   filter: brightness(1.2);
+  outline-offset: -1px;
   outline: 1px solid #2d699b;
 }
 
 .rounded-rect-icon {
   border: 2px solid #606060;
   border-radius: 10px;
-  width: 96px;
-  height: 62px;
+  width: 47px;
+  height: 47px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -172,8 +174,8 @@
 .rounded-rect-icon.list {
   border: 2px solid #606060;
   border-radius: 3px;
-  width: 23px;
-  max-width: 25px;
+  width: 14px;
+  max-width: 14px;
   height: 14px;
   display: flex;
   justify-content: center;
