--- a/src/components/content-components/center-panel-components/toolbar.css
+++ b/src/components/content-components/center-panel-components/toolbar.css
@@ -3,9 +3,9 @@
   margin-top: 13px;
   box-sizing: border-box;
   border-radius: 7px;
-  border: 1px #3C3C3C solid;
+  border: 1px #3c3c3c solid;
   color: #bbbbbb;
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   display: flex;
   flex-direction: row;
   justify-content: left;
@@ -14,7 +14,6 @@
   overflow-x: scroll;
   overflow-y: hidden;
 }
-
 
 .toolbar-section {
   display: flex;
@@ -44,7 +43,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #2A2A2A;
+  background-color: #2a2a2a;
   padding: 5px;
 }
 
