--- a/src/components/content-components/right-panel-components/field.css
+++ b/src/components/content-components/right-panel-components/field.css
@@ -5,7 +5,7 @@
 
   font: inherit;
   border-radius: 7px;
-  border: 1px #3C3C3C solid;
+  border: 1px #3c3c3c solid;
   color: #c2c2c2;
   background-color: #222222;
   font-size: 1.3em;
@@ -27,7 +27,7 @@
 
   font: inherit;
   border-radius: 7px;
-  border: 1px #3C3C3C solid;
+  border: 1px #3c3c3c solid;
   color: #c2c2c2;
   background-color: #222222;
   font-size: 1.3em;
