--- a/src/components/content-components/right-panel.css
+++ b/src/components/content-components/right-panel.css
@@ -22,5 +22,5 @@
 }
 
 .rotated-2 {
-  transition: transform 0.3s cubic-bezier(0,1.4,-0.1,1);
+  transition: transform 0.3s cubic-bezier(0, 1.4, -0.1, 1);
 }
