--- a/src/universal-styling/index.css
+++ b/src/universal-styling/index.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-html, body, #root {
+html,
+body,
+#root {
   height: 100dvh;
   min-height: 0;
   width: 100vw;
@@ -42,7 +44,7 @@ html, body, #root {
 
 [text-style="display"] {
   font-family: Instrument Sans, sans-serif;
-  color: #D9D9D9;
+  color: #d9d9d9;
 }
 
 [color-type="accent-color"] {
@@ -137,16 +139,16 @@ img {
   background-color: #ffffff22;
   border-radius: 10px !important;
   border: 5px solid #2a2a2a; /* match background to create spacing */
-  }
+}
 
 .scrollable.light-bg::-webkit-scrollbar-thumb {
   border: 5px solid #2a2a2a; /* match background to create spacing */
-  }
+}
 
 .scrollable.med-bg::-webkit-scrollbar-thumb {
   border: 5px solid #252525; /* match background to create spacing */
-  }
+}
 
 .scrollable.dark-bg::-webkit-scrollbar-thumb {
   border: 5px solid #222222; /* match background to create spacing */
-  }
+}
